--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 gradio>=4.0
 openai>=1.0
-gtts>=2.0
-python-dotenv>=0.19
 sounddevice>=0.4.6
 scipy>=1.0
 fastapi
 uvicorn
 websockets>=12.0
+Flask>=2.3.3
+Flask-SocketIO>=5.3.6
+eventlet>=0.33.3
+python-dotenv>=0.19
